# ccenv

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  check_sync_status.sh  install.sh  prospect.md  prospective-memory-ledger-design.md  session.md
.ccmemory/: .gitignore  .migrated-from  MEMORY.md  bump-top-level-bundle-version-not-just-subdir.md  ccenv-installed-vs-source-version.md  ccenvmcp-stdlib-mcp-shim.md  ccloop-cli-flags-thread-as-params.md  ccloop-install-heals-own-hooks.md  ccloop-interactive-relay-orphans-child-processes.md  ccloop-relay-not-cutoff-dependent.md  ccloop-stop-hook-return-0-kills-session.md  ccmemory-debian-build-unknown-install-layout.md  ccprospect-aitrader-first-cycle.md  ccprospect-module-created.md  claude-code-does-not-reap-task-output-files.md  context-wall-deterministic-signal.md  install-claude-md-component-owned.md  mcp-alwaysload-blocks-startup.md  mcp-heal-stale-command-pattern.md  no-git-checkout-to-undo-own-edits.md  no-per-component-venvs.md  no-version-history-in-claude-md.md  one-line-copy-paste-commands.md  pythonuserbase-banner-platform-gated.md  pythonuserbase-in-zshenv.md  shared-userbase-compiled-dep-abi-mismatch.md  src-tree-appledouble-sidecars.md
ccenvmcp/: pyproject.toml
ccenvmcp/ccenvmcp/: __init__.py  transport.py
ccenvmcp/docs/: mcp.md
ccenvmcp/tests/: test_transport.py
ccloop/: DESIGN.md  README.md  pyproject.toml
ccloop/src/ccloop/: __init__.py  cli.py  guard.py  keepgoing.py  runner.py  transcript.py  usage.py
ccloop/tests/: fake_claude.py  test_cli.py  test_guard.py  test_keepgoing.py  test_runner.py  test_transcript.py  test_usage.py
ccmemory/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
ccmemory/ccmemory/: __init__.py  cli.py  compile.py  hooks.py  index_gen.py  installer.py  mcp_server.py  migrate.py  paths.py  store.py
ccmemory/docs/: compile-memories.md  injection-ledger.md
ccmemory/skills/compile-memories/: SKILL.md
ccmemory/tests/: conftest.py  test_compile.py  test_hooks.py  test_installer.py  test_migrate.py  test_paths.py  test_store.py
ccproject/: README.md  SKILL.md  global-claude-md-snippet.md  install.sh
ccproject/docs/: awareness-hooks.md
ccproject/scripts/: analyze_project.py  awareness_hooks.py  generate_mermaid_callgraph.py  generate_structural_map.py
ccproject/templates/: CLAUDE.md.template  structural-map.md.template  subsystem.md.template
ccproject/templates/commands/: bootstrap-awareness.md  refresh-map.md  update-awareness.md
ccprospect/: CHANGELOG.md  README.md  pyproject.toml
ccprospect/ccprospect/: __init__.py  cli.py  contracts.py  events.py  hooks.py  index_gen.py  installer.py  mcp_server.py  paths.py  predicates.py  store.py  util.py
ccprospect/docs/: ccprospect.md
ccprospect/skills/prospect-integrate/: SKILL.md
ccprospect/tests/: conftest.py  test_hooks.py  test_installer.py  test_lifecycle.py  test_mcp.py  test_predicates.py  test_store.py
ccteam/: README.md  pyproject.toml
ccteam/ccteam/: __init__.py  checkpoint.py  cli.py  config.py  discovery.py  local_ipc.py  manifest.py  mcp_server.py  nats_client.py  node.py  p2p_dlm.py  p2p_transport.py  project_root.py  watcher.py
ccteam/docs/: architecture.md  operator.md  protocol.md  shared-dlm.md
ccteam/plugin/: .mcp.json
ccteam/plugin/.claude-plugin/: plugin.json
ccteam/plugin/hooks/: hooks.json
ccteam/tests/: test_checkpoint.py  test_cluster.py  test_config.py  test_discovery.py  test_dlm_logic.py  test_integration_nats.py  test_local_ipc.py  test_manifest.py  test_overlay_logic.py  test_p2p_dlm_logic.py  test_p2p_integration.py  test_project_root.py  test_watcher.py
ccusage/: LICENSE  README.md  install.py  paths.py  pyproject.toml  run_server.py  server.py  statusline.py
ccusage/tests/: test_server.py  test_statusline.py
docs/: check-sync-status.md  install.md
