[project]
name = "ccenvmcp"
version = "0.1.0"
description = "Stdlib-only Python 3.9+ MCP server shim — a drop-in for the tools-only slice of the official mcp SDK, without its 3.10 floor"
readme = {text = "See docs/mcp.md for the protocol surface and rationale.", content-type = "text/plain"}
requires-python = ">=3.9"
authors = [{name = "Steve Shoecraft", email = "spshoecraft@gmail.com"}]
license = {text = "MIT"}
keywords = ["claude-code", "mcp", "json-rpc", "stdio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ccenvmcp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
