[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccteam"
version = "0.3.0"
description = "MCP coordination layer for multiple Claude Code instances working on the same codebase"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Steve Shoecraft", email = "spshoecraft@gmail.com"}]
dependencies = [
    "nats-py>=2.6.0",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ccteam = "ccteam.cli:main"
ccteam-mcp = "ccteam.mcp_server:main"

[tool.setuptools.packages.find]
include = ["ccteam*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
