[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccusage-mcp"
version = "0.2.0"
description = "MCP server that exposes Claude Code's own context-window and rate-limit usage to the assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Stephen Shoecraft", email = "spshoecraft@gmail.com" }]
keywords = ["mcp", "claude", "claude-code", "context", "tokens"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.scripts]
ccusage-mcp = "server:main"
ccusage-statusline = "statusline:main"

[project.urls]
Homepage = "https://github.com/sshoecraft/ccusage-mcp"
Issues = "https://github.com/sshoecraft/ccusage-mcp/issues"

[tool.setuptools]
py-modules = ["server", "statusline", "paths"]
